--- a/styles/body.css
+++ b/styles/body.css
@@ -5,7 +5,23 @@
 }
 
 body {
-   
-    background-color: #f5f5f5;
-    
-} 
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.6;
+    background-color: #fff;
+    color: #333;
+    font-size: 16px;
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 15px;
+        line-height: 1.5;
+    }
+}
+
+@media (max-width: 576px) {
+    body {
+        font-size: 14px;
+        line-height: 1.4;
+    }
+}
