--- a/styles/main.css
+++ b/styles/main.css
@@ -1056,7 +1056,7 @@
 .section-title {
     font-size: 42px;
     font-weight: 700;
-    color: #2aaeeb;
+    color: #00CCFF;
     text-align: center;
     margin-bottom: 40px;
 }
@@ -1237,7 +1237,7 @@
 }
 
 .footer-heading {
-    color: #0EA5E9;
+    color: #00CCFF;
     font-size: 22px;
     font-weight: 700;
     margin-bottom: 25px;
@@ -1251,7 +1251,7 @@
     left: 0;
     width: 40px;
     height: 2px;
-    background: #0EA5E9;
+    background: #00CCFF;
     box-shadow: 0 0 5px rgba(0, 204, 255, 0.4);
 }
 
@@ -1300,7 +1300,7 @@
 .footer-links a:hover, 
 .footer-contact a:hover,
 .footer-additional a:hover {
-    color: #0EA5E9;
+    color: #00CCFF;
 }
 
 .footer-links a::after, 
