--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'Manrope';
-    src: url('Manrope-Regular.woff2') format('woff2'),
-        url('Manrope-Regular.woff') format('woff');
+    src: url('../fonts/Manrope-Regular.woff2') format('woff2'),
+        url('../fonts/Manrope-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'Manrope';
-    src: url('Manrope-Medium.woff2') format('woff2'),
-        url('Manrope-Medium.woff') format('woff');
+    src: url('../fonts/Manrope-Medium.woff2') format('woff2'),
+        url('../fonts/Manrope-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'Manrope';
-    src: url('Manrope-SemiBold.woff2') format('woff2'),
-        url('Manrope-SemiBold.woff') format('woff');
+    src: url('../fonts/Manrope-SemiBold.woff2') format('woff2'),
+        url('../fonts/Manrope-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
     font-family: 'Manrope';
-    src: url('Manrope-Bold.woff2') format('woff2'),
-        url('Manrope-Bold.woff') format('woff');
+    src: url('../fonts/Manrope-Bold.woff2') format('woff2'),
+        url('../fonts/Manrope-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
