--- a/styles/main.css
+++ b/styles/main.css
@@ -1431,7 +1431,8 @@
     
     .mobile-hero-background {
         display: block;
-        aspect-ratio: 16/9;
+        height: 100%;
+        transform: scale(1.01);
     }
     
     .hero {
@@ -2366,6 +2367,11 @@
     z-index: 1;
     will-change: transform;
     transform: translateZ(0);
+    backface-visibility: hidden;
+    perspective: 1000;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
 }
 
 @media (max-width: 768px) {
@@ -2375,7 +2381,8 @@
     
     .mobile-hero-background {
         display: block;
-        aspect-ratio: 16/9;
+        height: 100%;
+        transform: scale(1.01);
     }
     
     .hero {
