--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,7 @@
 @import url('styles/contact.css');
 @import url('styles/storage_vps.css');
 @import url('styles/fonts.css');
+@import url('styles/high-cpu-animations.css');
+@import url('styles/dedicated-servers-animations.css');
+@import url('styles/vps-animations.css');
+
